[project]
name = "ai-workflow-structured-outputs"
version = "1.0.0"
description = "Multi step and multimodel AI workflow with structured output"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "pypdf>=4.2.0",
    "pypdf>=4.2.0",
    "pydantic>=2.11.7",
]
